--- a/css/responsive.css
+++ b/css/responsive.css
@@ -133,6 +133,9 @@
         display: block;
         margin-bottom: 10px;
     }
+    .profile-notification {
+        padding: 15px 10px;
+    }
  }
  @media (max-width: 768px) and (min-width: 426px) {
     .navbar .sideMenu{
@@ -280,6 +283,17 @@
     .Profile-section {
         padding-top: 50px;
         padding-bottom: 50px;
+    }
+    .status ol p{
+        font-size: 14px;
+    }
+    .Profile-section {
+        padding-top: 35px;
+        padding-bottom: 50px;
+    }
+    .page-services .job-categories-block{
+        width: 314px;
+        margin-bottom: 26px;
     }
  }
  @media (max-width: 425px) and (min-width:321px) {
@@ -486,12 +500,46 @@
 .profile-order-content{
     padding: 10px;
 }
+.profile-order-content .order-media .order-media-pic {
+    width: 100%;
+    height: 270px;
 }
+.status{
+    padding: 20px 0;
+}
+.status ol p{
+    font-size: 14px;
+}
+.profile-table thead th {
+    padding: 7px 5px;
+    font-size: 14px;
+}
+.profile-table tbody tr td {
+    padding: 10px 3px;
+    font-size: 14px;
+}
+.profile-edit {
+    padding: 20px 10px;
+    margin-top: 15px;
+}
+.Profile-section {
+    padding-top: 35px;
+    padding-bottom: 50px;
+}
+.page-services .job-categories-block{
+    margin-bottom: 26px;
+    margin-left: 0;
+    margin-right: 0;
+}
+ }
 
  @media (max-width :375px) and (min-width: 320px){
     .navbar .sideMenu{
         top: 79px;
         padding: 20px 24px;
+    }
+    .navbar .sideMenu{
+        right: -107%;
     }
     .banner-hero .heading-banner {
         font-size: 18px !important;
@@ -590,5 +638,46 @@
 .recruitmentVisa .secondaryTitle{
     font-size: 18px;
     line-height: 1.6
+}
+.profile-order-content .view-button .download,
+.profile-order-content .view-button .details {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 10px 20px;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.status{
+    padding: 20px 0;
+    overflow-x: scroll;
+    width: 100%;
+}
+.selectedCustomer .massage{
+    font-size: 19px;
+}
+.selectedCustomer .contactType{
+    display: inline-block;
+}
+.selectedCustomer .contactType .contact{
+    margin-bottom: 20px;
+}
+.profile-edit {
+    padding: 20px 10px;
+    margin-top: 15px;
+}
+.page-banner .banner-title .banner-title-name h2 {
+    color: #17171d;
+    font-size: 28px;
+}
+.Profile-section {
+    padding-top: 35px;
+    padding-bottom: 50px;
+}
+.page-services .job-categories-block{
+    width: 285px;
+    margin-bottom: 26px;
+    margin-left: 0;
+    margin-right: 0;
 }
  }
