--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #00b8de;
+  background-color: #1216bc;
   outline: none;
   border-radius: 20px !important;
 }
@@ -1082,7 +1082,7 @@ header .headerAnimate {
   position: relative;
   z-index: 1;
   overflow: hidden;
-  padding-top: 150px;
+  padding-top: 90px;
   padding-bottom: 90px;
   background-color: #fff;
 }
@@ -2632,21 +2632,19 @@ header .headerAnimate {
   background-color: #fff;
   border: 1px solid #ddd;
   position: relative;
-  padding: 20px;
+  padding: 16px 8px;
   border-radius: 10px;
-  display: flex;
-  align-items: center;
   width: 100%;
   margin-bottom: 30px;
 }
 .profile-order-content .order-media {
-    width: 110px;
-    display: inline-block;
-    margin-right: 10px;
+  width: 100%;
+  display: inline-block;
+  margin-right: 10px;
 }
 .profile-order-content .order-media  .order-media-pic {
-  width: 90px;
-  height: 90px;
+  width:100%;
+  height: 118px;
   border-radius: 10px;
   overflow: hidden;
   position: relative;
@@ -2667,21 +2665,20 @@ header .headerAnimate {
   color: #606060;
 }
 .profile-order-content .order-details {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: block;
+  float: left;
 }
-.profile-order-content .order-details .order-info {
-  display: flex;
-  justify-content: space-between;
+.profile-order-content .order-details .view-button{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-.profile-order-content .order-details .order-info .order-number {
+.profile-order-content .order-content .order-number {
   font-size: 14px;
   margin-bottom: 0px;
   margin-left: 20px;
   font-weight: 500;
 }
-.profile-order-content .order-details .order-info .order-number i {
+.profile-order-content .order-content  .order-number i {
   margin-left: 9px;
 }
 .profile-order-content .view-button .download,
