--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,9 @@ span.select2.select2-container.select2-container--default {
 .carousel__track {
   direction: ltr !important;
 }
-
+.fancybox__container{
+  z-index: 1100;
+}
 .fancybox__caption {
   text-align: center;
 }
@@ -299,59 +301,78 @@ span.select2.select2-container.select2-container--default {
     height: 40px;
   }
 }
-.loader {
-  background: #ffffff;
+
+/*Loading*/
+.loading-area {
+  width: 100%;
+  height: 100%;
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 9999;
+  overflow: hidden;
+}
+.loading-area .loading-box {
   width: 100%;
   height: 100%;
-  display: flex;
-  z-index: 9999;
-  justify-content: center;
-  align-items: center;
-}
-.loader .spinner {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  display: inline-block;
-  border-top: 4px solid #00b8de;
-  border-right: 4px solid transparent;
-  box-sizing: border-box;
-  -webkit-animation: rotation 1s linear infinite;
-          animation: rotation 1s linear infinite;
-}
-.loader .spinner::after {
-  content: "";
-  box-sizing: border-box;
+  background-color: #fff;
   position: absolute;
   left: 0;
   top: 0;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  border-left: 4px solid #1014ab;
-  border-bottom: 4px solid transparent;
-  animation: rotation 0.5s linear infinite reverse;
+  opacity: 1;
+  z-index: 9999;
 }
-@-webkit-keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.loading-area .loading-pic {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  z-index: 99999;
+  text-align: center;
+  transform: translateY(-50%);
 }
 
+/*Loading Animation Start*/
+.wrapper {
+  margin: 0px auto;
+  display: block;
+}
+.wrapper .cssload-loader {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  margin: 48px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  background-color: #1967d2;
+  animation: 1.15s infinite linear;
+}
+.wrapper .cssload-loader:before, .wrapper .cssload-loader:after {
+  content: "";
+  animation: 1.15s infinite linear;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.wrapper .cssload-loader:before {
+  content: "";
+  border: 7px solid #fff;
+  top: 0px;
+  left: 0px;
+  animation-name: cssload-animation;
+}
+
+@keyframes cssload-animation {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(2);
+  }
+}
 .btn {
   border-radius: 16px;
 }
@@ -3064,6 +3085,7 @@ header .headerAnimate {
 }
 .cvModal {
   padding-top: 24px;
+  /* z-index: 1040 ; */
 }
 .cvModal .modal-content {
   border-radius: 24px;
