--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,25 @@ body {
 }
 
 content {
-  background-image: url(../images/banner/bg-1.jpg);
+  background-image: url(../images/banner/s2.webp);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 795px;
   min-height: 50vh;
   position: relative;
   display: block;
 }
-
+content .overlay-content{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #221bff;
+  opacity: 0.3;
+}
 .section-box {
   display: inline-block;
   width: 100%;
@@ -717,20 +730,70 @@ header .headerAnimate {
 .banner-hero .heading-title {
   font-size: 20px !important;
   line-height: 7px;
-  color: #05264E;
+  color: #fff;
   margin-bottom: 25px;
 }
 .banner-hero .heading-banner {
   font-size: 40px !important;
   line-height: 60px;
-  color: #05264E;
+  color: #fff;
   margin-bottom: 25px;
 }
 .banner-hero .banner-description {
   position: relative;
   font-size: 20px;
-  color: #4F5E64;
+  color: #fdfdfd;
   margin-bottom: 20px;
+}
+.banner-hero .features-list{
+  margin-top: 50px;
+}
+.banner-hero .features-list .feature-item {
+  position: relative;
+  border-radius: 13px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  margin-bottom: 0;
+  margin-right: 30px;
+  margin-left: 30px;
+  text-align: center;
+  background-color: transparent;
+  transition: all 0.3s linear;
+}
+.banner-hero .features-list .feature-item:hover .feature__icon {
+  -webkit-box-shadow: 0 0 0 9px rgb(0 0 0 / 10%);
+  box-shadow: 0 0 0 9px rgb(0 0 0 / 10%);
+  -webkit-transform: translateY(-7px);
+  transform: translateY(-7px);
+}
+.banner-hero .features-list .feature-item .feature__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 90px;
+  height: 90px;
+  font-size: 40px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  color: #221bff;
+  background-color: #ffffff;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  overflow: hidden;
+  line-height: 1;
+}
+.banner-hero .features-list .feature-item .feature__icon i{
+  font-weight: 300;
+}
+.banner-hero .features-list .feature-item .feature__title {
+  font-size: 15px;
+  color: #fff;
 }
 .banner-homepage .banner-inner .row .block-banner {
   padding-right: 0px;
@@ -778,7 +841,7 @@ header .headerAnimate {
   width: 100%;
   position: relative;
 }
-.banner-homepage .banner-imgs::before {
+/* .banner-homepage .banner-imgs::before {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -788,7 +851,7 @@ header .headerAnimate {
   background-size: contain;
   content: "";
   z-index: 1;
-}
+} */
 .banner-homepage .banner-imgs .banner-1 {
   position: absolute;
   z-index: 2;
@@ -3543,4 +3606,154 @@ header .headerAnimate {
 }
 .recruitmentVisa .requirement ul ::marker {
   color: #1014ab;
+}
+/* =================================== musaned-banner ================================================ */
+.musaned-banner{
+  background-image: url(../images/banner/page-content.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+  background-position: center center;
+  display: block;
+  width: 100%;
+  position: relative;
+}
+.musaned-banner .banner-content {
+  display: block;
+  text-align: center;
+  padding-bottom: 30px;
+  padding: 100px 0;
+}
+.musaned-banner .banner-content .banner-title {
+  position: relative;
+  margin-top: 60px;
+
+}
+.musaned-banner .banner-content .banner-title .banner-title-name {
+  display: inline-block;
+  margin-bottom: 30px;
+}
+.musaned-banner .banner-title .banner-title-name p {
+  color: #59595c;
+  font-size: 17px;
+  width: 70%;
+  text-align: center;
+  font-weight: 600;
+  margin: auto;
+  line-height: 1.9;
+}
+.musaned-platform{
+  padding: 120px 0;
+  background: #fff;
+  position: relative;
+}
+.musaned-platform .platform-content{
+  background-color: #1967d2;
+  border-radius: 50px;
+  padding: 55px 70px;
+  position: relative;
+  z-index: 1;
+  margin-right: 100px;
+  margin-bottom: 30px;
+}
+.musaned-platform .platform-content .platform-detail {
+  margin-left: 110px;
+  margin-bottom: 40px;
+}
+.musaned-platform .platform-content .platform-detail h3 {
+  color: #fff;
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.musaned-platform .platform-content .platform-detail p {
+  color: #f1f1f1;
+  font-size: 15px;
+  margin-bottom: 10px;
+  line-height: 1.9;
+  margin-left: 76px;
+}
+.musaned-platform .platform-media {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+}
+.musaned-platform .platform-media:after{
+  background-color: #fff;
+    content: "";
+    position: absolute;
+    width: 467px;
+    height: 467px;
+    border-radius: 50%;
+    left: -95px;
+    top: -34px;
+    z-index: -1;
+    box-shadow: 19px -20px 0px #4780ce;
+}
+.musaned-platform .platform-media .platform-video{
+  position: absolute;
+  width: 467px;
+  left: -94px;
+  top: -35px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(../images/img/family2.webp);
+  height: 100%;
+  min-height: 467px;
+  border-radius: 50%;
+}
+.musaned-platform .platform-media .platform-video .videopopup{
+  width: 80px;
+  height: 80px;
+  font-size: 30px;
+  padding-left: 5px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  background-color: #1967d2;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid #ffffff;
+}
+.musaned-platform .platform-media .platform-video .videopopup::before {
+  content: "";
+  width: 130%;
+  height: 130%;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-animation: play-button 1s infinite linear;
+  animation: play-button 1s infinite linear;
+}
+.musaned-platform .platform-media .platform-video .videopopup i {
+  font-size: 24px;
+}
+.musaned-platform .detail-info{
+  position: relative;
+  display: flex;
+  margin-bottom: 25px;
+}
+.musaned-platform .detail-info i {
+  font-size: 20px;
+  color: #fff;
+  padding: 0;
+  vertical-align: middle;
+}
+.musaned-platform .detail-info h3{
+  margin: 0;
+  font-size: 19px;
+  color: #fff;
+  margin-bottom: 9px;
+}
+.musaned-platform .detail-info p{
+  font-size: 15px;
+  color: #f1f1f1;
 }
